--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.3.0",
+    "@testing-library/react": "^10.0.2",
+    "@testing-library/user-event": "^10.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^10.0.1",
@@ -51,34 +54,36 @@
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "4.19.1",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-jest": "^21.5.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-react": "7.11.1",
-    "eslint-plugin-import": "2.14.0",
     "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jest": "^21.5.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "7.11.1",
     "file-loader": "1.1.11",
     "html-loader": "0.4.5",
     "html-webpack-plugin": "3.2.0",
     "jest": "^22.0.4",
     "loglevel": "^1.6.0",
-    "node-sass": "4.9.2",
+    "node-sass": "^4.13.1",
     "postcss-loader": "^2.0.9",
     "prettier": "^1.14.3",
     "react-test-renderer": "^16.2.0",
+    "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "1.3.2",
     "source-map-loader": "0.2.3",
     "style-loader": "0.21.0",
     "url-loader": "1.0.1",
-    "webpack": "4.22.0",
+    "webpack": "^4.42.1",
     "webpack-cleanup-plugin": "^0.5.1",
     "webpack-cli": "3.1.2",
     "webpack-dashboard": "2.0.0",
-    "webpack-dev-server": "3.1.9"
+    "webpack-dev-server": "^3.10.3"
   },
   "jest": {
     "verbose": true,
+    "testURL": "http://localhost/",
     "bail": true,
     "collectCoverage": true,
     "coverageDirectory": "coverage",
